static_website/static/static_website/hero_properties.css
.hero-image {
    background-image: url("./cover-image-3.jpg");
    height: 62.5rem;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-sub-image {
    background-image: url("./cover-image-3.jpg");
    height: 40rem;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-text {
    transform: translateY(10rem);
}

.hero-small-text {
    transform: translateY(10rem);
}

.hero-resume-text {
    transform: translateY(5rem);
}

.hero-small-font {
    font-size: 50px;
    font-weight: 400;
    color: #000000;
    text-align: center;
}

.hero-small-sub-font {
    font-size: 30px;
    font-weight: 400;
    color: #000000;
    text-align: center;
}

.hero-home-heading {
    font-weight: 400;
    font-size: 4rem;
}

.hero-home-subheading {
    font-weight: 400;
    font-size: 2rem;
}

.hero-large-heading {
    font-size: 4.375rem;
    font-weight: 300;
    color: #000000;
    text-align: center;
}

.hero-large-sub-heading {
    font-size: 2.1875rem;
    font-weight: 300;
    color: #000000;
    text-align: center;
}

/* ----------- Non-Retina Screens ----------- */

@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
    div.hero-image {
        height: 45rem;
    }
    div.hero-sub-image {
        height: 40rem;
    }
    div.hero-text {
        transform: translateY(9rem);
    }
    div.hero-small-text {
        transform: translate(-20%, -50%);
    }
}

@media (min-device-width: 992px) and (max-device-width: 1199.98px) {
    div.hero-large-font {
        font-size: 30px;
        text-align: left;
        font-weight: 400;
        padding-bottom: 10px;
    }
    div.hero-large-sub-font {
        font-size: 20px;
        text-align: left;
        font-weight: 400;
    }
    div.hero-small-font {
        font-size: 25px;
        text-align: left;
        font-weight: 400;
        padding-bottom: 10px;
    }
    div.hero-small-sub-font {
        font-size: 20px;
        text-align: left;
        font-weight: 400;
    }
    div.hero-text {
        transform: translate(3, 3);
    }
    div.hero-small-text {
        top: 50%;
        left: 20%;
        transform: translate(-20%, -50%);
    }
    div.hero-image {
        height: 400px;
    }
    div.hero-sub-image {
        height: 350px;
    }
}

/*Extra Small Devices*/

@media (min-device-width: 300px) and (max-device-width: 575.98px) {
    div.hero-large-font {
        font-size: 30px;
        font-weight: 400;
        padding-bottom: 10px;
    }
    div.hero-large-sub-font {
        font-size: 20px;
        font-weight: 400;
    }
    div.hero-small-font {
        font-size: 25px;
        font-weight: 400;
        padding-bottom: 10px;
    }
    div.hero-small-sub-font {
        font-size: 20px;
        font-weight: 400;
    }
    div.hero-text {
        transform: translate(1rem, 1rem);
    }
    div.hero-small-text {
        position: relative;
        transform: translateY(3.4rem);
    }
    div.hero-image {
        height: 400px;
    }
    div.hero-sub-image {
        height: 350px;
    }
}

